Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51648

Deadlock happens when a Q_GLOBAL_STATIC object connected to QtDBus signal

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.1
    • 5.6.0 RC
    • D-Bus
    • None
    • Linux, Qt 5.6.0 RC
    • b77ef8a7e6e4104067d52824e29eadc8c66f5929

      See backtrace for more details.

      An arbitrary QObject is connected to a D-Bus signal via QDBusConnection::connect. If this object is deleted only in a static destructor, it's possible that the QDBusConnectionManager thread has already exited. This causes a deadlock because QObject::destroyed is connected via Qt::BlockingQueuedConnection to the QDBusConnectionPrivate object and its thread is no longer processing events.

        1. backtrace
          2 kB
          Weng Xuetian
        For Gerrit Dashboard: QTBUG-51648
        # Subject Branch Project Status CR V

            csslayer Weng Xuetian
            csslayer Weng Xuetian
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes